[package]
name = "ralgeb"
description = "This package has some mathematical tools to allow user perform operations on Point, Line, Circle, Matrix"
version = "0.1.0"
authors = ["rajkumarGosavi <princegosavi12@gmail.com>"]
repository = "https://github.com/rajkumarGosavi/ralgeb/"
edition = "2018"
keywords = ["mathematics", "linear algebra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
